Fixing social media on mobile

--- a/src/assets/_scss/app/components/_off-canvas.scss
+++ b/src/assets/_scss/app/components/_off-canvas.scss
@@ -52,7 +52,7 @@ $hamburger-slit-height: 3px;
 //-----------------------------------------------------------------
 
 .lv-off-canvas {
-	ul:not(.is-special ul) {
+	ul {
 		position: absolute;
 		top: 0;
 		right: 0;
@@ -115,9 +115,14 @@ $hamburger-slit-height: 3px;
 	li.is-special {
 		border: 0;
 
-		li {
-			margin-left: 0;
-			border: 0;
+		ul {
+			position: static;
+			padding: 0;
+
+			li {
+				margin-left: 0;
+				border: 0;
+			}
 		}
 	}
 
